[IZPACK-1709] Web installer does not work in Windows (#760)
Co-authored-by: Patrick Reinhart <patrick@reini.net>